# gnome-builder

./: Makefile.am  configure.ac
contrib/egg/: Makefile.am  egg-directory-model.c  egg-directory-model.h  egg-fill-box.c  egg-fill-box.h  egg-rect.c  egg-rect.h  egg-search-bar.c  egg-stack-list.c  egg-stack-list.h
data/theme/: Adwaita-dark.css  Adwaita-shared.css  Adwaita.css
data/ui/: ide-shortcuts-window.ui
libide/: Makefile.am  ide-source-view.c  ide-vcs.c  ide-vcs.h  ide.c  ide.h
plugins/: Makefile.am
plugins/create-project/: gbp-create-project-widget.c
plugins/devhelp/theme/: shared.css
plugins/fallback/: Makefile.am  ide-directory-vcs.c  ide-directory-vcs.h
plugins/git/: Makefile.am  git-plugin.c  git.plugin  ide-git-remote-callbacks.c  ide-git-vcs.c  ide-git-vcs.h
plugins/html-preview/html_preview_plugin/: __init__.py  markdown-view.js
plugins/symbol-tree/: Makefile.am  gb-symbol-tree-panel.ui  gb-symbol-tree-panel.vala  gb-symbol-tree-plugin.gresource.xml  symbol-tree.plugin
po/: POTFILES.in
src/: Makefile.am  gb-enums.c.in  gnome-builder.h  gnome-builder.mk
src/code-assistant/: gb-source-code-assistant-completion.c  gb-source-code-assistant-completion.h  gb-source-code-assistant.c  gb-source-code-assistant.h
src/editor/: gb-source-view.c
src/gca/: gca-service.c  gca-service.h  gca-service.xml  gca-structs.h
src/tree/: gb-tree.c
src/workbench/: gb-workbench-private.h  gb-workbench.c
src/workspace/: gb-panel-addin.c  gb-panel-addin.h
tests/: Makefile.am  test-fill-box.c  test-ide-source-view.c  test-stack-list.c
